--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon"  href="logoo.png">
+    <link rel="icon"  href="logoo.png" alt="Sakura Abroad Studies Logo">
     
      <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+     <meta name="description" content="Explore opportunities for studying abroad with Sakura Abroad Studies. Find programs, scholarships, and expert guidance for your international education journey." />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <!-- <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created using create-react-app" -->
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -33,7 +35,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sakura Abroad Studies</title>
+    <!-- <title>Sakura Abroad Studies</title> -->
+    <title>Study Abroad Services - Sakura Abroad Studies</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
