index.html edited

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,31 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Sakura Abroad Studies",
+        "url": "https://www.sakuraabroadstudies.com",
+        "description": "Explore opportunities for studying abroad with Sakura Abroad Studies. Find programs, scholarships, and expert guidance for your international education journey.",
+        "logo": "https://www.sakuraabroadstudies.com/logoo.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "071-591138",
+          "contactType": "Customer Service"
+        },
+        "sameAs": [
+          "https://www.facebook.com/SakuraAbroadStudies",
+          "https://twitter.com/SakuraAbroad"
+        ]
+      }
+      </script>
+      
     <!-- <meta
       name="description"
       content="Web site created using create-react-app" -->
-    />
+   
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
