--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
       </script>      
     
     <title>Study Abroad Services - Sakura Abroad Studies</title>
+    <meta name="description" content="Explore top study abroad programs with Sakura Abroad Studies. Find expert advice, testimonials, and guides to make your international education experience unforgettable.">
+    <meta name="keywords" content="study abroad, international education, study overseas,study in japan, Sakura Abroad Studies">
+    <!-- Other meta tags as needed -->
 
   </head>
   <body>
