--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
         <p><a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a></p>
     </div>
-</footer> --> ->
+</footer> --> 
 
   
   
